# bazel_rust_wasm_ts

./: .gitignore  README.md  WORKSPACE
my_ts/: BUILD  package-lock.json  package.json  tsconfig.json  webpack.config.js
my_ts/src/: App.ts
my_wasm_lib/: BUILD
my_wasm_lib/cargo/: BUILD  Cargo.toml  crates.bzl
my_wasm_lib/cargo/remote/: bumpalo-3.4.0.BUILD  cfg-if-0.1.10.BUILD  js-sys-0.3.44.BUILD  lazy_static-1.4.0.BUILD  log-0.4.11.BUILD  proc-macro2-1.0.19.BUILD  quote-1.0.7.BUILD  syn-1.0.36.BUILD  unicode-xid-0.2.1.BUILD  wasm-bindgen-0.2.67.BUILD  wasm-bindgen-backend-0.2.67.BUILD  wasm-bindgen-macro-0.2.67.BUILD  wasm-bindgen-macro-support-0.2.67.BUILD  wasm-bindgen-shared-0.2.67.BUILD  web-sys-0.3.44.BUILD
my_wasm_lib/src/: lib.rs
